# AnACor_public

./: .gitignore  MANIFEST.in  README.md  doc.docx  error_logging.txt  example_post_process .sh  example_post_process.sh  example_pre_process.sh  example_process.sh  example_process_mp.sh  installation_dials.py  log.txt  meta.yaml  setup.py
AnACor/: AnaltyicalAbsorptionCorrection.py  CMakeLists.txt  Core_accelerated.py  Makefile  RayTracing.py  absorption_coefficient.py  anacor_logging.py  image_process.py  initialization.py  into_flex.py  main_lite.py  main_undiffract.py  matrices.h  mp_lite.py  mp_worker.py  param.py  postprocess_lite.py  preprocess.py  preprocess_lite.py  raw_ray_tracing.c  raw_ray_tracing_gpu.cu  ray_tracing.c  ray_tracing_gpu.cu  ray_tracing_run.cpp  refl_2_json.py  stacking.py  test_main_lite.py  test_main_lite_ib.py  unit_test.c  unit_test.h  utils.py
AnACor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
AnACor/c/: Makefile  bisection.c  bisection.h  matrices.h  ray_tracing.c  ray_tracing.h  testkit.c  testkit.h
AnACor/c/gpu/: ray_tracing_gpu.cu
AnACor/cmake/: compiler_options.cmake
AnACor/double/: Makefile  matrices.h  ray_tracing.c  ray_tracing_gpu.cu  test_main_lite.py
AnACor/float/: Makefile  main_lite_f.py  matrices.h  ray_tracing_f.c  ray_tracing_gpu_f.cu  test_main_lite_f.py  unit_test.h
AnACor/lite/: 14116_scaled_abs_acsh_50.json  abs_2_csv.py  calculate_statistics.py  change_input_abs.py  cluster.sh  convert_2_csv.py  errormodel_2_csv_sh.py  execute.sh  prototype.sh  refl_2_json.py
AnACor/one_thread/: Makefile  ray_tracing.c  ray_tracing.h  ray_tracing_gpu.cu  test_main_lite.py  unit_test.h  utils.py
AnACor/src/: CMakeLists.txt  Makefile  bisection.c  gridding_interpolation.c  ray_tracing.c  ray_tracing.h  ray_tracing_basic.c  ray_tracing_gpu.c  testkit.c  testkit.h
AnACor/src/gpu/: GPU_reduction.cuh  ray_tracing_gpu.cu  ray_tracing_gpu.cuh  ray_tracing_gpu_old.cu
AnACor/utils/: 3D_visualization.py  Core_accelerated.py  __init__.py  absorption_coefficient.py  absorption_surface.py  adapative_sampling.py  image_process.py  into_flex.py  prototype.sh  prototype_result.sh  unit_test_pl.py  utils_gridding.py  utils_ib.py  utils_mp.py  utils_os.py  utils_resolution.py  utils_rt.py  visual_models.py  visualize_3d_load.py  visualize_3d_save.py
AnACor/utils/partial/: centre_determination.py  main3_general_mp_pl.py  main3_general_pl.py  unit_test_pl.py  utils.py  utils_lite.py
AnACor/verification/: Makefile  analytical.py  cylinder_verification_new.py  cylinderical_verification.py  main_verification.py  plot_compare_cylinder_graphs.py  plot_compare_rect_graphs .py  plot_compare_sphere_graphs.py  ray_tracing.h  rec_verification_new.py  sphere_verification_new.py  utils_rt.py  verif_ray_tracing.c  verif_ray_tracing_gpu.cu  verif_rect.py
AnACor1.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
